@@ -3176,6 +3176,7 @@ dobuild:
 			cob_free (p->db);
 			cob_free (p->last_readkey);
 			cob_free (p->last_dupno);
+			cob_free (p->rewrite_sec_key);
 			cob_free (p->cursor);
 			if (bdb_env != NULL) {
 				bdb_env->lock_put (bdb_env, &p->bdb_file_lock);
