@@ -1,4 +1,10 @@
 
+2017-04-08  Edward Hart <edward.dan.hart@gmail.com>
+
+	* cobc.c, codegen.c, pplex.l: fixed buffer overflows and double
+	  frees in listing code, SORT of table with OCCURS DEPENDING 0 TO n
+	  and when aborting compilation in the lexer.
+
 2017-03-31  Edward Hart <edward.dan.hart@gmail.com>
 
 	* typeck.c (cb_emit_set_to): added error when trying to set address of a
